Thu Mar 13 06:41:39 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* examples/quest.cc: Add --default-op option.

Thu Mar 13 06:35:26 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* examples/quest.cc: Whitespace tweak.

Sun Feb 23 10:11:27 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: Stop trying to explicitly list compilers which support
	  __builtin_expect (LLVM does too, others may as well).

Sun Feb 23 10:10:43 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_wrdb.cc: Expand crashrecovery1 to check that the expected
	  base files exist and ones which shouldn't exist don't.

Sun Feb 23 10:05:28 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* HACKING: makeindex is now in Debian package texlive-binaries.

Sun Feb 23 10:04:19 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/sorting.rst: Fix incorrect parameter types in Xapian::Weight
	  subclass example.

Sun Feb 23 09:57:46 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* tests/api_replicate.cc: Move comment to in front of the function it
	  is actually talking about.

Sun Feb 23 09:54:49 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* xapian-config.in: Add some missing shell quoting identified by
	  shellcheck.

Sun Feb 23 09:48:25 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/quickstart.rst: Split --cxxflags and --libs for portability
	  (noted by "Hurricane Tong" on xapian-devel).

Sun Feb 23 09:46:58 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* docs/glossary.rst: Add definition of "collection frequency".

Tue Jan 28 23:47:21 GMT 2014  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.17.

Tue Jan 28 22:48:33 GMT 2014  Olly Betts <olly@survex.com>

	* Backport change from trunk: