@@ -2,7 +2,7 @@
  * @brief Combine subqueries, weighting as if they are synonyms
  */
 /* Copyright 2007,2009 Lemur Consulting Ltd
- * Copyright 2009 Olly Betts
+ * Copyright 2009,2014 Olly Betts
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -56,11 +56,16 @@ class SynonymPostList : public PostList {
     /// Flag indicating if we've called recalc_maxweight on the subtree yet.
     bool have_calculated_subtree_maxweights;
 
+    /// Lower bound on doclength in the subdatabase we're working over.
+    Xapian::termcount doclen_lower_bound;
+
   public:
-    SynonymPostList(PostList * subtree_, MultiMatch * matcher_)
+    SynonymPostList(PostList * subtree_, MultiMatch * matcher_,
+		    Xapian::termcount doclen_lower_bound_)
 	: subtree(subtree_), matcher(matcher_), wt(NULL),
 	  want_doclength(false), want_wdf(false),
-	  have_calculated_subtree_maxweights(false) { }
+	  have_calculated_subtree_maxweights(false),
+	  doclen_lower_bound(doclen_lower_bound_) { }
 
     ~SynonymPostList();
 
