@@ -1,3 +1,12 @@
+Fri Mar 14 00:40:42 GMT 2014  Olly Betts <olly@survex.com>
+
+	* Backport change from trunk:
+	* matcher/localsubmatch.cc,matcher/synonympostlist.cc,
+	  matcher/synonympostlist.h: In SynonymPostList, avoid fetching the
+	  doclength if the weighting scheme doesn't need it and the calculated
+	  wdf for the synonym in <= doclength_lower_bound for the current
+	  subdatabase.  (fixes #360)
+
 Thu Mar 13 06:41:39 GMT 2014  Olly Betts <olly@survex.com>
 
 	* Backport change from trunk:
